# euler

./: LICENSE  README.md  euler.cabal  euler2.cabal
app/: Main.hs
src/: Group1.hs  Group2.hs  Group3.hs  Group4.hs  Problems.hs  Util.hs
test/: Spec.hs
