name: euler
version: 0.1.0.0
synopsis: Project Euler reorganised into a Stack package
description: Please see README.md
license: BSD3
license-file: LICENSE
author: Leo Zhang
maintainer: leo@leozhang.me
copyright: 2015 Leo Zhang
category: Math
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Problems
  other-modules:
    Group1,
    Group2,
    Group3,
    Group4,

    Util
  build-depends:
    base,
    array,
    split,
    containers
  default-language: Haskell2010

executable euler
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    euler,
    cmdargs
  default-language: Haskell2010

test-suite euler-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base,
    euler,
    hspec,
    QuickCheck
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
