name: euler2
version: 0.1.0.0
synopsis: Project Euler reorganised into a Stack package
description: Please see README.md
license: BSD3
license-file: LICENSE
author: Leo Zhang
maintainer: leo@leozhang.me
copyright: 2015 Leo Zhang
category: Math
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Problems
  other-modules: Util
  build-depends:
    base,
    array
  default-language: Haskell2010

executable euler2
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    euler2,
    cmdargs
  default-language: Haskell2010

test-suite euler2-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base,
    euler2,
    hspec,
    QuickCheck
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
